# Yato

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  build_all.cmake
actors/: Actors.md  CMakeLists.txt
actors/yato/actors/: actor.h  actor_path.h  actor_ref.h  actor_system.h  behaviour.h  cell_builder.h  dispatcher.h  inbox.h  logger.h  message.h
actors/yato/actors/io/: facade.h  inet_address.h  tcp.h  udp.h
actors/yato/actors/io/private/: context.h  tcp.cpp  tcp_listener.h  tcp_remote.h  udp.cpp  udp_remote.h
actors/yato/actors/private/: abstract_executor.h  actor.cpp  actor_cell.cpp  actor_cell.h  actor_context.h  actor_path.cpp  actor_ref.cpp  actor_system.cpp  actor_system_ex.h  asking_actor.h  cell_builder.cpp  dynamic_executor.cpp  dynamic_executor.h  functor.h  logger.cpp  logger.h  mailbox.h  message.h  name_generator.h  pinned_executor.cpp  pinned_executor.h  scheduler.h  system_message.h  thread_pool.cpp  thread_pool.h
actors/yato/actors/private/actors/: asking_actor.h  group.h  guardian.h  root.cpp  root.h  selector.cpp  selector.h
cmake/: CMakeLists-GCC.cmake  (+14 more)
cmake/ini/: CMakeLists.txt
cmake/xml/: CMakeLists.txt
cmake/yaml/: CMakeLists.txt
modules/actors/: CMakeLists.txt
modules/actors/tests/: test_actors.cpp  test_actors_ask.cpp  test_actors_behaviour.cpp  test_actors_common.h  test_actors_inbox.cpp  test_actors_path.cpp  test_actors_spawning.cpp  test_actors_watch.cpp  test_scheduler.cpp  test_thread_pool.cpp
modules/actors/tests/io/: test_actors_tcp.cpp  test_actors_udp.cpp
modules/actors/yato/actors/: actor.h  actor_common.h  actor_path.h  actor_props.h  actor_ref.h  actor_system.h  behaviour.h  cell_builder.h  config.h  dispatcher.h  inbox.h  logger.h
modules/actors/yato/actors/io/: facade.h  inet_address.h  tcp.h  udp.h
modules/actors/yato/actors/io/private/: context.h  facade.cpp  tcp.cpp  tcp_connection.h  tcp_listener.h  tcp_receiver.h  tcp_remote.h  udp.cpp  udp_connection.h  udp_receiver.h  udp_remote.h
modules/actors/yato/actors/private/: abstract_executor.h  actor.cpp  actor_cell.cpp  actor_cell.h  actor_path.cpp  actor_ref.cpp  actor_system.cpp  actor_system_ex.h  cell_builder.cpp  dispatcher.cpp  dynamic_executor.cpp  dynamic_executor.h  execution_context.h  functor.h  inbox.cpp  logger.cpp  mailbox.cpp  mailbox.h  message.h  name_generator.h  pinned_executor.cpp  pinned_executor.h  properties_internal.h  scheduler.h  system_message.h  thread_pool.h
modules/actors/yato/actors/private/actors/: asking_actor.h  group.h  guardian.h  root.cpp  root.h  selector.cpp  selector.h
modules/config/: CMakeLists.txt  Config.md
modules/config/tests/: test_config_utility.cpp  test_stl.cpp
modules/config/tests/cmd/: test_config_cmd.cpp
modules/config/tests/include/: test_config.h  test_config_load.h  test_config_ops.h
modules/config/tests/ini/: test_ini_config.cpp
modules/config/tests/json/: test_config_json.cpp  test_config_json_ordered.cpp
modules/config/tests/manual/: test_config_manual.cpp  test_config_manual_ordered.cpp  test_config_ops_manual.cpp
modules/config/tests/xml/: test_xml_config.cpp  test_xml_config_attr.cpp
modules/config/tests/yaml/: test_config_ops_yaml.cpp  test_config_yaml.cpp
modules/config/yato/config/: config.cpp  config.h  config_backend.cpp  config_backend.h  config_builder.cpp  config_builder.h  config_operations.h  containers.h  path.h  smart_pointers.h  stl.h  utility.cpp  utility.h
modules/config/yato/config/cmd/: cmd.cpp  cmd.h  cmd_config.cpp  cmd_config.h
modules/config/yato/config/cmd/private/: cmd_config.h  cmd_value.h
modules/config/yato/config/ini/: ini.cpp  ini.h  ini_config.cpp  ini_config.h
modules/config/yato/config/ini/private/: ini_config.cpp  ini_config.h  ini_lib.h  ini_parser.cpp  ini_parser.h  ini_section.cpp  ini_section.h  ini_value.h
modules/config/yato/config/json/: json.cpp  json.h  json_config.cpp  json_config.h  json_object.cpp  json_object.h
modules/config/yato/config/manual/: manual.cpp  manual.h  manual_array.cpp  manual_array.h  manual_config.cpp  manual_config.h  manual_object.cpp  manual_object.h  manual_value.h
modules/config/yato/config/private/: manual_array.h  manual_config.h  manual_config_base.cpp  manual_config_base.h  manual_map.h  manual_multimap.h  manual_ordered_map.h  manual_value.h
modules/config/yato/config/xml/: xml.cpp  xml.h  xml_config.cpp  xml_config.h
modules/config/yato/config/yaml/: yaml.cpp  yaml.h  yaml_config.cpp  yaml_config.h
perf_tests/: CMakeLists.txt
perf_tests/source/: benchmark_sampler.cpp  benchmark_vector.cpp  vector_stl.cpp  vector_yato.cpp
tests/: CMakeLists.txt  Makefile  test_array_nd.cpp  test_array_view.cpp  test_filter_iterator.cpp  test_instance_of.cpp  test_invoke.cpp  test_meta.cpp  test_not_null.cpp  test_numeric_iterator.cpp  test_range.cpp  test_reflection.cpp  test_transform_iterator.cpp  test_tuple.cpp  test_type_traits.cpp  test_types.cpp  test_vector_nd.cpp  test_vector_view.cpp  test_zip_iterator.cpp
tests/source/: test_aligning_allocator.cpp  test_any.cpp  test_any_match.cpp  test_any_ptr.cpp  test_array_nd.cpp  test_array_view.cpp  test_atomic_attributes.cpp  test_attributes_interface.cpp  test_compressed_pair.cpp  test_container_nd.cpp  test_dynamic_array.cpp  test_filter_iterator.cpp  test_finally.cpp  test_instance_of.cpp  test_interval_map.cpp  test_invoke.cpp  test_lookup_table.cpp  test_meta.cpp  test_not_null.cpp  test_numeric_iterator.cpp  test_optional.cpp  test_range.cpp  test_reflection.cpp  test_sampler.cpp  test_storage.cpp  test_token_iterator.cpp  test_tokenizer.cpp  test_transform_iterator.cpp  test_tuple.cpp  test_type_match.cpp  test_type_traits.cpp  test_types.cpp  test_variant.cpp  test_vector_1d.cpp  test_vector_nd.cpp  test_vector_view.cpp  test_zip_iterator.cpp
tests/source/actors/: test_actors.cpp  test_actors_ask.cpp  test_actors_behaviour.cpp  test_actors_inbox.cpp  test_actors_path.cpp  test_actors_spawning.cpp  test_actors_watch.cpp  test_scheduler.cpp  test_thread_pool.cpp
tests/source/actors/io/: test_actors_tcp.cpp  test_actors_udp.cpp
(+68 files in other folders)
